-Flies, big flies, little spiders, and tiny ghosts can now be caught with bug nets
-Enemies and critters in spooky mod that have different variants now have different bestiary entires (like the fuzzbats and putty slimes)
-Putty slimes now use vanilla slime ai since there old ai was kind of annoying in game, and was annoying to fix/work with
-Marigold jumping ai has been polished a bit to look and behave better, and they will now make a sound every time they spit a spore at you
-Tortumors and Giant Tortumors can no longer move through blocks
-All natural spawns will be disabled during spooky mod's boss fights
-Increased contact damage scaling for all spooky mod bosses in expert and master mode because it was way too weak before
-Spooky mod enemies and critters now have more specific spawn condition labels in the bestiary, specifically for daytime and nighttime exclusive enemies
-All spooky mod pets now display on character selection screen if you have them equipped




~BUGS AND OTHER FIXES~

-Fixed moco's projectiles being invisible in multiplayer
-Fixed an issue where big bone's phase transition forcefield would draw off center when you zoomed in
-Fixed the valley of eyes crashing during world generation with large worlds
-Fixed a strange issue with the gore monger armor's aura where it became nearly invisible if you didnt have any after-images or pulsing outlines caused by certain armors
-Fixed an issue with the old hunter's crossbow being positioned on the player weirdly when held
-Fixed a ton of spooky mod item sell prices, lowered ones that were too expensive, and increased ones that were too cheap
-Fixed certain items in the mod that were supposed to have sell prices but didnt have any
-Fixed certain items in the mod not having journey mode researchability (this was fixed by tmodloader since they finally made items have a default journey mode research value of 1)



